--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -157,13 +157,29 @@
             </div>
         </div>
     </div>
-    <div id="footer">
-        <div id="footer-div">
-
-        </div>
-        <h1>Sundown</h1>
-        <div id="footer-bottom">
-
+        <div id="footer">
+            <div id="footer-div">
+                <div class="f-left">
+                    <h3>Work</h3>
+                    <h3>Studio</h3>
+                    <h3>Contact</h3>
+                </div>
+                <div class="f-right">
+                    <p>Get industry insights and creative inspiration straight to your inbox.</p>
+                    <div class="input-container">
+                        <input required class="input" placeholder="Email address" type="text">
+                        <i class="ri-arrow-right-double-fill"></i>
+                    </div>
+                </div>
+            </div>
+            <h1>Sundown</h1>
+            <div id="footer-bottom">
+                <div class="f-links">
+                    <p>Copyright © Sundown Studio</p>
+                    <p>Brooklyn,NY</p>
+                    <p>Instagram</p>
+                    <p>Linkedin</p>
+                </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
